nanochord